--- a/Bookstore/Bookstore.csproj
+++ b/Bookstore/Bookstore.csproj
@@ -19,9 +19,17 @@
   <ItemGroup>
     <None Remove="Infrastructure\" />
     <None Remove="Models\ViewModels\" />
+    <None Remove="Components\" />
+    <None Remove="Views\Shared\Components\" />
+    <None Remove="Views\Shared\Components\Category\" />
+    <None Remove="Pages\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrastructure\" />
     <Folder Include="Models\ViewModels\" />
+    <Folder Include="Components\" />
+    <Folder Include="Views\Shared\Components\" />
+    <Folder Include="Views\Shared\Components\Category\" />
+    <Folder Include="Pages\" />
   </ItemGroup>
 </Project>
