--- a/Bookstore/Bookstore.csproj
+++ b/Bookstore/Bookstore.csproj
@@ -23,6 +23,8 @@
     <None Remove="Views\Shared\Components\" />
     <None Remove="Views\Shared\Components\Category\" />
     <None Remove="Pages\" />
+    <None Remove="Views\Checkout\" />
+    <None Remove="Views\Shared\Components\CartSummary\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Infrastructure\" />
@@ -31,5 +33,7 @@
     <Folder Include="Views\Shared\Components\" />
     <Folder Include="Views\Shared\Components\Category\" />
     <Folder Include="Pages\" />
+    <Folder Include="Views\Checkout\" />
+    <Folder Include="Views\Shared\Components\CartSummary\" />
   </ItemGroup>
 </Project>
